# opensearch-semantic-search-tutorial

./: .gitignore  00_create_index.txt  01_download_dataset.py  02_chunk.py  03_embed.py  04_ingest.py  05_search.py  README.md  pyproject.toml
